src/Components/Search/style.css
.ant-select:not(.ant-select-customize-input) .ant-select-selector {
  background-color: #d8d2fa !important;
  border: 1px solid black !important;
  border-radius: 5px;
  margin-right: 20px;
  /* margin-top: 3px; */
  width: 220px;
  height: 32px;
}

.ant-select-selector:focus {
  outline: none;
  border: none;
}

.ant-select-selector {
  outline: none;
  border: none;
}
.search {
  margin-top: 10px;
  display: flex;
  justify-content: space-evenly;
}

::selection {
  border: none;
  color: none;
}
/* 
.searchInput {
  background-color: #d8d2fa !important;
  border: 1px solid black;
  border-radius: 6px;
  width: 70%;
  height: 32px;
} */

/* .ant-select,
.ant-select-auto-complete,
.ant-select-single,
.ant-select-show-search {
  display: none;
} */

.ant-select-single:not(.ant-select-customize-input),
.ant-select-selector {
  width: 60%;
}

.ant-select-clear {
  color: black !important;
  background-color: transparent !important;
  font-size: 18px !important;
  top: 42% !important;
}

